<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>velmwheel_laser_odom</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>Interface package providing launch files running Velmwheel-specific laser-based odometry</description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>
    
    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- Package's runtime dependencies -->
    <exec_depend>velmwheel_launch</exec_depend>
    <exec_depend>launch_common</exec_depend>
    <exec_depend>laser_scan_converter</exec_depend>
    <exec_depend>point_cloud_assembler</exec_depend>
    <exec_depend>laser_scan_matcher</exec_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>


</package>
